--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           rm -f .gitignore
           ls -lha
           git add vendor/*
-          git archive -o ${{ github.event.repository.name }}-${{ github.ref_name }}.zip --prefix ${{ github.event.repository.name }}/ $(git write-tree) 
+          git archive -o ${{ github.event.repository.name }}-${{ github.ref_name }}.zip --prefix woocommerce/ $(git write-tree) 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
